base pug template

--- a/views/base.pug
+++ b/views/base.pug
@@ -6,7 +6,7 @@ html
     title Natours | Exciting tours for adventurous people
     link(rel='stylesheet' href='css/style.css')
     link(rel='shortcut icon' type='image/png', href='img/favicon.png')
-    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+    link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
 
   body 
     //- HEADER
@@ -25,7 +25,7 @@ html
 
     //- CONTENT
     section.overview 
-      h1= Tour
+      h1= tour
 
     //- FOOTER
     footer.footer 
@@ -37,3 +37,4 @@ html
         li: a(href='#') Become a guide
         li: a(href='#') Careers
         li: a(href='#') Contact
+      p.footer_copyright &copy; by Leonardo Terrão. Feel free to use this project for your own purpose, EXCEPT producing your own course or tutorials!
