--- a/views/base.pug
+++ b/views/base.pug
@@ -21,6 +21,7 @@ html
     //- FOOTER
     include _footer
 
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js', )
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js', )
     //- script(src='/js/mapbox.js')
-    script(src='/js/login.js')
+    //- script(src='/js/login.js')
+    script(src='/js/bundle.js')
